css: Fix spacing of toolbar

--- a/data/meld.css
+++ b/data/meld.css
@@ -27,9 +27,8 @@
     border-style: solid;
     border-color: @borders;
 
-    -GtkToolbar-button-relief: normal;
-    box-shadow: inset 0 3px alpha(black, 0.02), inset 0 2px alpha(black, 0.02), inset 0 1px alpha(black, 0.02);
-    padding: 2px;
+    -GtkToolbar-button-relief: none;
+    padding: 3px 2px 2px 2px;
 }
 
 LinkMap {
